base-linux: add PowerPC support

--- a/base/etc/tools.conf
+++ b/base/etc/tools.conf
@@ -22,6 +22,9 @@ endif
 ifeq ($(filter-out $(SPECS),arm),)
 CROSS_DEV_PREFIX ?= /usr/local/genode-gcc/bin/genode-arm-
 endif
+ifeq ($(filter-out $(SPECS),powerpc),)
+CROSS_DEV_PREFIX ?= /usr/local/genode-gcc/bin/genode-powerpc-
+endif
 
 #
 # We use libsupc++ from g++ version 3 because
