--- a/base-linux/etc/specs.conf
+++ b/base-linux/etc/specs.conf
@@ -15,7 +15,11 @@ else
 ifeq ($(shell uname -m),armv7l)
 SPECS ?= genode linux_arm sdl arm_v7a
 else
+ifeq ($(shell uname -m),ppc)
+SPECS ?= genode linux_powerpc sdl
+else
 SPECS ?= genode linux_x86_32 sdl
+endif
 endif
 endif
 endif
